public/babelbooapp/app.css
/* ... */
h3 {
    font-size: 24px !important;
}

.primary-bg {
    background-color: #00618C;
}

.primary, h3 {
    color: #00618C;
}

.row {
    margin: 0px;
}

/*----------   LANDING   ----------*/
#login-button {
    margin-top: 8px;
    margin-right: 15px;
}

#login-button a {
    margin-right: 10px;
}

#login-bubble {
    padding: 10px 10px 0px 10px;
    border-radius: 2px;
    box-shadow: 1px 1px 3px #848484, 0px 0px 20px rgba(132, 132, 132, 0.3);
    display: block;
    background-color: white;
    margin-right: 20px;
    margin-top: -5px;
    position: fixed;
    right: 20px;
    z-index: 999;
}

#login-bubble button {
    width: 100%;
}

#login-bubble div {
    margin: 10px;
}

.call {
    background: url(/img/popcorn.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
-moz-background-size: cover;
-o-background-size: cover;
background-size: cover;
    margin-top: -10px;
    margin-left: auto;
    margin-right: auto;
    padding: 30px;
}

.landing h1 {
    margin-bottom: 40px;
    font-size: 36px;
    line-height: 1em;
    margin-top: 20px;
}

.landing h2 {
    font-size: 56px;
    color: #00618C;
    margin-bottom: 25px;
}

.value h3, .team h3 {
    margin-top: 20px;
    margin-bottom: 10px;
    line-height: 1.1em;
}

.value h3 {
    color: #fff;
}

.team h3 {
    color: #333;
}

.landing .container {
    margin: 0px;
    width: 100%;
    padding: 0px;
}

.landing .value {
    background-color: #00618C;
    color: #ffffff;
    padding: 40px;
}

.landing .team {
    background-color: #ffffff;
    padding: 40px;
}

.footer {
    background-color: #00618C;
    color: #ffffff;
    height: 80px;
    padding: 5px;
}

.footer .row {
    padding: 5px;
}

.footer a, .footer a:visited, .footer a:hover {
    color: #ffffff;
    padding-left: 5px;
    padding-right: 5px;
}

.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

.cuadrado {
    background-color:#00618C;
    border-radius: 10px;
    padding:20px;
    color:#fff;
    font-size:20px;
}

.cuadrado h2 {
    color:#fff;
}

.form-control {
    margin-bottom:20px;
}


/*----------    FEEDBACK   ----------*/
.feedback-btn {
    color: #fff;
    background-color: #00618C;
    border-radius: 2px;
    box-shadow: 1px -1px 3px #848484, 0px 0px 20px rgba(132, 132, 132, 0.3);
    padding: 5px 10px 5px 10px;
    position: fixed;
    bottom: -3px;
    /*left: -71px;*/
    right: 40px;
    z-index: 999;
    cursor: pointer;
}

.feedback-btn i {
    padding-right: 7px;
}

.feedback-form {
    position: fixed;
    padding: 10px;
    background-color: #fff;
    z-index: 999;
    border-radius: 2px;
    box-shadow: 1px 1px 6px #848484, 0px 0px 20px rgba(132, 132, 132, 0.6);
    bottom: 40px;
    right: 40px;
}

.feedback-form h3 {
    margin-top: 0px;
}

.feedback-form .close-form {
    color: #00618C;
}

.feedback-form .close-form:hover {
    color: #54ACD2;
}


.feedback-form textarea {
    min-width: 400px;
}
/*----------   /FEEDBACK   ----------*/


/*----------   HEADER   ----------*/
nav {
    height: 50px;
}

nav li > a {
    color: #fff;
    display: block;
    padding: 0px 15px;
    line-height: 50px;
}

nav ul li {
    float: left;
    position: relative;
}

.navbar-shadow {
    width: 100%;
    position: fixed;
    margin-top: -10px;
    box-shadow: 0px -4px 5px 5px #555;
    z-index: -1;
}

.medals i {
    padding-left: 5px;
    padding-right: 3px;
}

ul {
    list-style-type: none;
    padding: 0;
}

nav .fa-user, ranking .fa-user {
    color: #00618C;
    font-size: 34px;
    margin-top: 5px;
}

ranking .fa-user {
    margin-left: -1px;
}

nav .avatar, ranking .avatar {
    border-radius: 50%;
    overflow: hidden;
    background-color: #fff;
}

nav .avatar {
    margin-right: 5px;
}

img.avatar {
    width: 35px;
    height: 35px;
    border-radius: 50%;
    margin-right: 5px;
}

nav li > a:hover {
    color: #fff;
    text-decoration: none;
    background-color:#004e70;
}

nav li > a:focus {
    color: #fff;
    text-decoration: none;
}

.user-dropdown {
    position: absolute;
    z-index: 1000;
    min-width: 100%;
    padding: 5px 15px 5px 15px;
    font-size: 15px;
    text-align: left;
    list-style: none;
    background-color: #fff;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    border: 1px solid rgba(0,0,0,.15);
    border-radius: 3px;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 1 1px 3px #848484, 0px 0px 20px rgba(132, 132, 132, 0.3);
}

.user-dropdown .fa {
    display: inline;
}

.user-dropdown a, .user-dropdown a:hover {
    color: #00618C;
    text-decoration: none;
    padding: 0;
}


/*---------   SEARCHER   ---------*/
.searcher {
    width:100%;
    margin: -10px 0 0 0;/*Chapuza para colocarlo por debajo y que se quede fijo el header*/
    padding: 2px;
    background-color: #54ACD2;
    box-shadow: 0px -4px 5px 5px #555;
}

.search-tag{
    margin:0 auto 0 auto;
}

.lvl {
    margin: 10px 0 0 0;
}

.lvl li{
    background-color:#E25041;
}

.lvl li:hover{
    background-color:#B8312F;
}

li.lvl-selected{
    background-color:#B8312F;
}

.lvl li, .search-tag li{
    padding:5px;
    margin:0 0 10px 5px;
    color:#fff;
    border-radius: 3px;
    cursor: pointer;
}

.search-tag li {
    background-color: #63d0ff;
}

.search-tag li:hover{
    background-color:#2969B0;
}

li.tag-selected {
    background-color:#2969B0;
}

/*---------    PLAYLIST CONTENT --------*/
.row-centered {
    text-align:center;
}

.tag-container {
    max-width: 972px;
    margin-left: auto;
    margin-right: auto;
}

.myContainer {
    max-width: 972px;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

.playlists-block h3 {
    color: #333;
    text-align: left;
    padding-left: 18px;
    margin-top: 20px;
    margin-bottom: 0px;
    line-height: 1em;
}
/* ... */

